--- a/.env.docker
+++ b/.env.docker
@@ -1,10 +1,10 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Grist
+APP_ENV=production 
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=syslog
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
